<resources>
    <string name="app_name">Bierkiste-XXL</string>
    <string name="action_beer_new">Neues Bier hinzufügen</string>
    <string name="action_contact">Kontakt</string>
    <string name="action_profil_edit">Profil ändern</string>
    <string name="action_help">Hilfe</string>
    <string name="action_logout">Abmelden</string>
    <string name="action_info">Info</string>
    <string name="action_search">Suche</string>
    <string name="action_search_verb">Suchen</string>
    <string name="search_example">Biername, Braucherei, etc. &#8230;</string>
    <string name="action_save">Speichern</string>
    <string name="action_back">Zurück</string>
    <string name="button_search">Bier suchen</string>
    <string name="title_activity_new_beer">Neues Bier hinzufügen</string>
    <string name="label_name">Name:</string>
    <string name="label_beer_company">Brauerei:</string>
    <string name="label_beer_kind">Bierart:</string>
    <string name="label_beer_country">Herkunftsland:</string>
    <string name="label_beer_per_mille">Alkoholgehalt:</string>
    <string name="label_bottle_color">Farbe:</string>
    <string name="label_bottle_size">Inhaltsmenge:</string>
    <string name="label_result">Ergebnisse:</string>
    <string name="label_no_result">Leider kein passendes Bier gefunden.</string>
    <string name="text_own_result">eigene Sammlung</string>
    <string name="text_other_result">allgemeine Sammlung</string>

    <string name="bottle_color_prompt">Wähle eine Farbe</string>
    <string-array name="bottle_color_array">
        <item id="brown">braun</item>
        <item id="green">grün</item>
        <item id="blue">blau</item>
    </string-array>

    <string name="country_prompt">Wähle ein Land</string>
    <string-array name="country_array">
        <item id="1">Deutschland</item>
        <item id="2">Österreich</item>
    </string-array>
    <string name="title_activity_search">Suche</string>


    <string name="beer_kind_prompt">Wähle eine Bierart</string>
    <string-array name="beer_kind_array">
        <item id="brown">Pils</item>
        <item id="green">Hefeweizen</item>
    </string-array>
    <string name="title_activity_info">Informationen</string>
    <string name="title_activity_contact">Kontakt</string>
    <string name="info_text">Viel Spaß mit der APP Bierkiste-XXL</string>
    <string name="contact_text">Falls Fragen sind, einfach eine E-Mail an stern@bierkiste-xxl.de schreiben ;)</string>
    <string name="title_activity_menu_main">MenuMainActivity</string>
</resources>
